added views hbs and  css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,3 +4,196 @@
     color: white;
     background-color: #222;
 }
+
+.navbar {
+    padding: 19.1px 22.3px;
+    margin-bottom: 16px;
+    display: flex;
+    align-items: center;
+    background-color: #222;
+    border-bottom: 1px solid #444;
+}
+
+.navbar ul {
+    display: flex;
+    list-style: none;
+}
+
+.navbar ul li {
+    margin:24px;
+}
+
+.navbar ul li a {
+    text-decoration: none;
+    font-weight: bold;
+    padding: 2px;
+}
+
+.navbar ul li a:hover {
+    font-size: 18px;
+    transition: 0.5s;
+    border-radius: 5px;
+    padding: 4px;
+}
+
+.container {
+    min-height: 65vh;
+    padding: 32px;
+}
+
+footer {
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #444;
+
+}
+
+footer span {
+    color: white;
+    font-weight: bold;
+}
+
+h1 {
+    margin-bottom: 24px;
+    text-align: center;
+}
+.form-container {
+    display: flex;
+    justify-content: center;
+}
+
+.form-control {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 16px;
+}
+
+.form-control label{
+    margin-bottom: 12px;
+}
+
+
+.form-control input{
+    height: 30px;
+    width: 250px;
+    padding: 3px 3px 3px 6px;
+    border: 1px solid #777;
+    border-radius: 8px;
+}
+
+.btn {
+    height: 40px;
+    width: 130px;
+    border: 2px solid green;
+    border-radius: 8px;
+    background-color: green;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.btn:hover {
+    transition: 0.5s;
+    background-color: transparent;
+}
+
+.products {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.product h3 {
+    margin-bottom: 4px;
+}
+
+
+.product {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 8px;
+    padding: 8px;
+    border: 1px solid #777;
+    border-radius: 8px;
+    width: 250px;
+}
+
+.actions {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 16px;
+}
+
+.actions a {
+    font-style: italic;
+    font-weight: bold;
+}
+
+.product-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 8px;
+    padding: 8px;
+    border-radius: 8px;
+    width: 250px;
+}
+
+.product-page a{
+    margin-bottom: 4px;
+}
+.product-page h1 {
+    margin-top: 8px;
+    border-bottom: 1px solid #777;
+    padding: 8px;
+}
+
+.product-page p{
+    margin-bottom: 4px; 
+}
+
+.product-page span{
+    margin-right: 2px;
+    font-weight: bold;
+}
+
+.actions-product {
+    display: flex;
+    align-items: center;
+}
+
+.btnProduct-edit {
+    margin: 4px;
+    height: 40px;
+    width: 120px;
+    border: 2px solid orange;
+    border-radius: 8px;
+    background-color: rgba(255, 166, 0, 0.9);
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.btnProduct-edit:hover {
+    transition: 0.5s;
+    background-color: transparent;
+}
+
+.btnProduct-remove {
+    margin: 4px;
+    height: 40px;
+    width: 120px;
+    border: 2px solid red;
+    border-radius: 8px;
+    background-color: rgba(255, 0, 0, 0.9);
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.btnProduct-remove:hover {
+    transition: 0.5s;
+    background-color: transparent;
+}
