--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,5 +14,8 @@
         </ul>
     </nav>
     {{{body}}}
+    <footer>
+        <p>Criado por <span>Pedro Mauricio </span> &copy; 2023</p>
+    </footer>
 </body>
 </html>
