added html in views

--- a/views/createEvent.handlebars
+++ b/views/createEvent.handlebars
@@ -14,7 +14,11 @@
             <input type="text" placeholder="Digite o preco do produto" name="price">
         </div>
         <div class="form-control">
+            <label for="image">Link da imagem: </label>
+            <input type="text" placeholder="Insira a url da imagem" name="image">
+        </div>
+        <div class="form-control">
             <button type="submit" class="btn">Cadastrar</button>
-            </div>
+        </div>
     </form>
 </div>
