--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,8 +9,8 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href=""></a>Home</li>
+            <li><a href=""></a>Cadastrar</li>
         </ul>
     </nav>
     {{{body}}}
