added function in routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,11 +9,13 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href=""></a>Home</li>
-            <li><a href=""></a>Cadastrar</li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/create/form">Cadastrar</a></li>
         </ul>
     </nav>
-    {{{body}}}
+    <div class="container">
+        {{{body}}}
+    </div>
     <footer>
         <p>Criado por <span>Pedro Mauricio </span> &copy; 2023</p>
     </footer>
