added functions remove and edit event in controller

--- a/views/createEvent.handlebars
+++ b/views/createEvent.handlebars
@@ -2,7 +2,7 @@
 <div class="form-container">
     <form action="/create" method="POST">
     <div class="form-control">
-        <label for="name"> Nome do produto: </label>
+        <label for="name"> Nome do evento: </label>
             <input type="text" placeholder="Digite o nome do produto" name="name">
         </div>
         <div class="form-control">
