--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
-<div class=" products ">
-    {{#each products}}
-        <div class="product">
+<div class=" events ">
+    {{#each event}}
+        <div class="event">
             <h3>{{this.name}}</h3>
             <p>R$ {{this.price}}</p>
             <a href="/{{this._id}}"> Ver detalhes</a>
