--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,19 +98,19 @@ h1 {
     background-color: transparent;
 }
 
-.products {
+.events {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.product h3 {
+.event h3 {
     margin-bottom: 4px;
 }
 
 
-.product {
+.event {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -133,7 +133,7 @@ h1 {
     font-weight: bold;
 }
 
-.product-page {
+.event-page {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -143,25 +143,30 @@ h1 {
     width: 250px;
 }
 
-.product-page a{
+.event-page a{
     margin-bottom: 4px;
 }
-.product-page h1 {
+.event-page h1 {
     margin-top: 8px;
     border-bottom: 1px solid #777;
     padding: 8px;
 }
 
-.product-page p{
+.event-page p{
     margin-bottom: 4px; 
 }
 
-.product-page span{
+.event-page span{
     margin-right: 2px;
     font-weight: bold;
 }
 
-.actions-product {
+.event-page img{
+    border-radius: 5px;
+    margin-bottom: 8px;
+}
+
+.actions-event {
     display: flex;
     align-items: center;
 }
@@ -193,7 +198,7 @@ h1 {
     font-weight: bold;
 }
 
-.btnProduct-remove:hover {
+.btnevent-remove:hover {
     transition: 0.5s;
     background-color: transparent;
 }
