--- a/views/viewEvent.handlebars
+++ b/views/viewEvent.handlebars
@@ -1,14 +1,14 @@
-<div class="products">
-    <div class="product-page">
+<div class="events">
+    <div class="event-page">
         <a href="/">Voltar</a>
-        <h1>{{product.name}}</h1>
+        <h1>{{event.name}}</h1>
         <img src="{{event.image}}" alt="{{event.name}}">
-        <p><span>Preço:</span> R${{product.price}}</p>
-        <p><span>Descrição:</span> {{product.description}}</p>
+        <p><span>Preço:</span> R${{event.price}}</p>
+        <p><span>Descrição:</span> {{event.description}}</p>
     </div>
-    <div class="actions-product">
-        <a href="/edit/{{product._id}}"><button class="btnProduct-edit">Editar</button></a>
-        <form action="/remove/{{product._id}}" method="POST">
+    <div class="actions-event">
+        <a href="/edit/{{event._id}}"><button class="btnProduct-edit">Editar</button></a>
+        <form action="/remove/{{event._id}}" method="POST">
             <input type="submit" value="Remover" class="btnProduct-remove">
         </form>
     </div>
